change support apis
